src/test/ui/nll/issue-48803.stderr
error[E0506]: cannot assign to `x` because it is borrowed
  --> $DIR/issue-48803.rs:10:5
   |
LL |     let y = &x;
   |             -- borrow of `x` occurs here
...
LL |     x = "modified";
   |     ^^^^^^^^^^^^^^ assignment to borrowed `x` occurs here
LL |
LL |     println!("{}", w); // prints "modified"
   |                    - borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
